fixed container for laptops and navbar flexwrap

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body::after {
 }
 
 .container {
-    padding: 0px 40px;
+    padding: 0px 320px;
 }
 
 .h1wrapper{
@@ -445,17 +445,19 @@ nav {
         list-style-type: none;
         display: flex; /* Default to horizontal layout */
         flex-direction: row; /* Align items horizontally */
+        flex-wrap: wrap;
         padding: 0;
         margin: 0;
+        justify-content: center;
         align-items: center; /* Center items vertically */
         text-align: center;
+        line-height: 32px;
 }
 
 .navbar li {
     margin: 0 4px;
     text-align: center;
 display: flex;
-font-size:;
 }
 
 .navbar-text {
@@ -649,7 +651,7 @@ align-items: center;
 }
 
 /* Responsive styles */
-@media (max-width: 768px) {
+@media (min-width: 768px) and (max-width: 1140px) {
     .burger-menu {
         display: inline-block;
     }
@@ -700,9 +702,12 @@ align-items: center;
     .navbar li {
         margin: 10px 0;
     }
+    .container {
+        padding: 0px 32px;
+    }
 }
 
-@media (min-width: 320px) and (max-width: 536px) {
+@media (min-width: 320px) and (max-width: 770px) {
     
 
     .navbar-text {
@@ -775,5 +780,8 @@ align-items: center;
 
     .product-container {
         flex-direction: column;
+    }
+    .container {
+        padding: 0px 32px;
     }
 }
